--- a/TraceIt/Views/GradeSelectionPage.xaml
+++ b/TraceIt/Views/GradeSelectionPage.xaml
@@ -45,6 +45,7 @@
 
             <converters:SelectedIndexToStandardConverter x:Key="indexConverter"/>
             <converters:GradingSchemeToVisibilityConverter x:Key="visibilityConverter"/>
+            <converters:SfSegmentIsEnabledToColorConverter x:Key="enabledToColorConverter"/>
 
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -71,11 +72,16 @@
                                                                         Mode=TwoWay}">
                                 <system:List x:TypeArguments="buttons:SfSegmentItem">
                                     <buttons:SfSegmentItem Text="Not Achieved"/>
-                                    <buttons:SfSegmentItem Text="Achieved"/>
+                                    <buttons:SfSegmentItem Text="Achieved" />
                                     <buttons:SfSegmentItem Text="Merit" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
+                                    
                                     <buttons:SfSegmentItem Text="Excellence" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
                                 </system:List>
                             </buttons:SfSegmentedControl>
                         </StackLayout>
@@ -89,11 +95,16 @@
                                                                         Mode=TwoWay}">
                                 <system:List x:TypeArguments="buttons:SfSegmentItem">
                                     <buttons:SfSegmentItem Text="Not Achieved"/>
-                                    <buttons:SfSegmentItem Text="Achieved"/>
+                                    <buttons:SfSegmentItem Text="Achieved" />
                                     <buttons:SfSegmentItem Text="Merit" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
+
                                     <buttons:SfSegmentItem Text="Excellence" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
                                 </system:List>
                             </buttons:SfSegmentedControl>
                         </StackLayout>
@@ -107,11 +118,16 @@
                                                                         Mode=TwoWay}">
                                 <system:List x:TypeArguments="buttons:SfSegmentItem">
                                     <buttons:SfSegmentItem Text="Not Achieved"/>
-                                    <buttons:SfSegmentItem Text="Achieved"/>
+                                    <buttons:SfSegmentItem Text="Achieved" />
                                     <buttons:SfSegmentItem Text="Merit" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='MeritItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
+
                                     <buttons:SfSegmentItem Text="Excellence" IsEnabled="{Binding GradingScheme, 
-                                                        Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"/>
+                                                           Converter={StaticResource visibilityConverter}, ConverterParameter='ExcellenceItem'}"
+                                                           BackgroundColor="{Binding Source={RelativeSource Self}, Path=IsEnabled,
+                                                           Converter={StaticResource enabledToColorConverter}}"/>
                                 </system:List>
                             </buttons:SfSegmentedControl>
                         </StackLayout>
