BindingContext now set in XAML. Created GetYear method that retrieves the appropiate index that corresponds with the year. Removed SetContext method and its usage after repository initialisation moved to App.xaml.cs.

--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -15,6 +15,10 @@
              x:Name="Page"
              x:DataType="viewmodels:SubjectsPageViewModel">
 
+    <views:BasePage.BindingContext>
+        <viewmodels:SubjectsPageViewModel/>
+    </views:BasePage.BindingContext>
+
     <views:BasePage.ToolbarItems>
         <ToolbarItem>
             <ToolbarItem.IconImageSource>
