--- a/TraceIt/Views/Charts/CreditsChartPage.xaml
+++ b/TraceIt/Views/Charts/CreditsChartPage.xaml
@@ -3,6 +3,8 @@
              xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms"
              xmlns:progressbar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusion.SfProgressBar.XForms"
              xmlns:viewmodels="clr-namespace:TraceIt.ViewModels"
+             xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+             xmlns:system="clr-namespace:System.Collections.Generic;assembly=netstandard"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,14 +16,39 @@
     </ContentView.BindingContext>
 
     <ContentView.Content>
-        <ScrollView>
-            <StackLayout>
+        <Grid RowDefinitions="50, *" RowSpacing="25">
+                <buttons:SfSegmentedControl x:Name="chartSelector" Margin="0, 10"
+                                            SegmentPadding="20" SegmentCornerRadius="25"
+                                            HorizontalOptions="Center" SegmentWidth="150"
+                                            Grid.Row="0">
+                    
+                    <buttons:SfSegmentedControl.SelectionIndicatorSettings>
+                        <buttons:SelectionIndicatorSettings Color="Orange" CornerRadius="25"/>
+                    </buttons:SfSegmentedControl.SelectionIndicatorSettings>
+                    
+                    <buttons:SfSegmentedControl.ItemsSource>
+                        <system:List x:TypeArguments="buttons:SfSegmentItem">
+                            <buttons:SfSegmentItem Text="Credits Count"/>
+                            <buttons:SfSegmentItem Text="Grade Breakdown"/>
+                        </system:List>
+                    </buttons:SfSegmentedControl.ItemsSource>
+                </buttons:SfSegmentedControl>
+                
                 <progressbar:SfCircularProgressBar x:Name="creditsProgressBar" Minimum="0" Progress="{Binding AchievedCredits}" 
                                                Maximum="{Binding TotalCredits}" 
                                                SegmentCount="{Binding Source={RelativeSource Self}, Path=Maximum}"
                                                ShowProgressValue="True" TrackColor="DimGray" ProgressColor="Orange"
-                                               VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                                               VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                                               IsVisible="False" Grid.Row="1">
 
+                    <progressbar:SfCircularProgressBar.Triggers>
+                        <DataTrigger TargetType="progressbar:SfCircularProgressBar" 
+                                     Binding="{Binding Source={x:Reference chartSelector}, Path=SelectedIndex}"
+                                     Value="0">
+                            <Setter Property="IsVisible" Value="True"/>
+                        </DataTrigger>
+                    </progressbar:SfCircularProgressBar.Triggers>
+                    
                     <progressbar:SfCircularProgressBar.Content>
                         <Label Text="{Binding Source={x:Reference creditsProgressBar}, Path=Progress, StringFormat='{0} &#10; credits'}"
                            TextColor="White" FontSize="40" FontAttributes="Italic, Bold" HorizontalTextAlignment="Center"
@@ -29,16 +56,27 @@
                     </progressbar:SfCircularProgressBar.Content>
                 </progressbar:SfCircularProgressBar>
 
-                <chart:SfChart VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <chart:SfChart VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                               IsVisible="False" Grid.Row="1">
+
+                    <chart:SfChart.Triggers>
+                        <DataTrigger TargetType="chart:SfChart" 
+                                     Binding="{Binding Source={x:Reference chartSelector}, Path=SelectedIndex}"
+                                     Value="1">
+                            <Setter Property="IsVisible" Value="True"/>
+                        </DataTrigger>
+                    </chart:SfChart.Triggers>
+                    
                     <chart:PieSeries ItemsSource="{Binding CreditBreakdowns}"
                                  XBindingPath="Grade" YBindingPath="Credits"
-                                 DataMarkerPosition="Inside" EnableTooltip="True">
+                                 DataMarkerPosition="Inside" EnableTooltip="True"
+                                 ExplodeOnTouch="True" ExplodeAll="False">
                         
                         <chart:PieSeries.ColorModel>
                             <chart:ChartColorModel Palette="Custom">
                                 <chart:ChartColorModel.CustomBrushes>
                                     <chart:ChartColorCollection>
-                                        <Color>#020202</Color>
+                                        <Color>#363636</Color>
                                         <Color>#512888</Color>
                                         <Color>#004F98</Color>
                                         <Color>Orange</Color>
@@ -48,38 +86,36 @@
                         </chart:PieSeries.ColorModel>
                         
                         <chart:PieSeries.DataMarker>
-                            <chart:ChartDataMarker LabelContent="YValue"/>
+                        <chart:ChartDataMarker LabelContent="YValue">
+                            <chart:ChartDataMarker.LabelStyle>
+                                <chart:DataMarkerLabelStyle FontSize="18" FontAttributes="Bold"/>
+                            </chart:ChartDataMarker.LabelStyle>
+                        </chart:ChartDataMarker>
                         </chart:PieSeries.DataMarker>
                     </chart:PieSeries>
 
                     <chart:SfChart.Legend>
-                        <chart:ChartLegend>
+                        <chart:ChartLegend ItemMargin="14, 0" DockPosition="Bottom" 
+                                           Orientation="Horizontal" Margin="0, 0, 0, 40">
                             <chart:ChartLegend.ItemTemplate>
-
                                 <DataTemplate>
+                                    <StackLayout Orientation="Horizontal" Spacing="14"
+                                                 HorizontalOptions="StartAndExpand">
+                                        <BoxView Color="{Binding IconColor}" HorizontalOptions="Center" 
+                                                 VerticalOptions="Center" HeightRequest="25" 
+                                                 WidthRequest="{Binding Source={RelativeSource Self}, Path=HeightRequest}" 
+                                                 CornerRadius="5"/>
 
-                                    <StackLayout Orientation="Horizontal" WidthRequest="143">
-
-                                        <BoxView Color="{Binding IconColor}" HorizontalOptions="Center" VerticalOptions="Center" HeightRequest="13" WidthRequest="13" />
-
-                                        <Label FontSize="13" VerticalTextAlignment="Center" 
+                                        <Label FontSize="16" VerticalTextAlignment="Center" 
                                                Text="{Binding DataPoint.Grade}" TextColor="White"/>
 
                                     </StackLayout>
-
                                 </DataTemplate>
-
                             </chart:ChartLegend.ItemTemplate>
                         </chart:ChartLegend>
                     </chart:SfChart.Legend>
-
-                    <chart:SfChart.Title>
-                        <chart:ChartTitle Text="Test" TextColor="White"/>
-                    </chart:SfChart.Title>
-
                 </chart:SfChart>
-            </StackLayout>
-        </ScrollView>
+            </Grid>
     </ContentView.Content>
 
 </ContentView>
